# papyrus

./: README.md  hello.py  noxfile.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
papyrus/: __init__.py  exceptions.py  finder.py  log.py  main.py  parsing.py  pyramid.py  writing.py
test/: __init__.py  test_main.py
tests/: conftest.py  test_finder.py  test_parsing.py  test_pyramid.py  test_writing.py
