[project]
name = "papyrus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cattrs>=24.1.2",
    "openapi-spec-validator>=0.7.1",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "nox>=2025.2.9",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-sugar>=1.0.0",
    "ruff>=0.9.6",
    "types-pyyaml>=6.0.12.20241230",
]

[tool.uv]
package = true

[tool.mypy]
strict = true
python_version = "3.13"
packages = ["papyrus", "tests"]


[project.scripts]
papyrus = "papyrus.main:app"


